--- a/Week1/index.html
+++ b/Week1/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>John Doe CV</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
     <!-- Custom fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,7 +19,7 @@
     <div class="container">
       <header>
         <div class="name-and-picture">
-          <div id="avatar"><img src="/sp-avatar.png" alt="My avatar" /></div>
+          <div id="avatar"><img src="sp-avatar.png" alt="My avatar" /></div>
           <h1 id="name">John Doe</h1>
         </div>
         <address>
