fixed padding issue with additional info

--- a/Week1/index.html
+++ b/Week1/index.html
@@ -163,7 +163,7 @@
           </div>
         </section>
         <section>
-          <div class="category">
+          <div class="category additional">
             <h2>ADDITIONAL INFO</h2>
           </div>
           <div class="content skills-lang-add">
