Added social to address info

--- a/Week1/index.html
+++ b/Week1/index.html
@@ -37,7 +37,15 @@
             </li>
             <li>
               <a href="mailto:mail:me@domain.nl">me@domain.nl </a> <br />
-              <a href="www.mywebsite.com">www.mywebsite.com </a>
+              <a href="https://www.mywebsite.com">www.mywebsite.com </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com">
+                <div class="social linkedin">in</div></a
+              >
+              <a href="https://www.twitter.com"
+                ><img class="social" src="./twitterw.png" alt="twitter" />
+              </a>
             </li>
           </ul>
         </address>
@@ -48,11 +56,11 @@
           <div class="content">
             <p>
               I'm John Doe. I was born in the Balkans but I've been living in
-              the Netherlands for more than 20 years. I'm interested in
-              technology and the arts. I've studied engineering but am now
-              trying to transition into web development I like to follow the
-              latest developments in tech, but also like to read about retro
-              computers. I also like to paint and draw and watch the latest
+              the Netherlands for more than 20 years. My interests are mainly
+              technology and the arts. I've studied engineering and am now
+              trying to transition into web development. I like to follow the
+              latest tech news, but also like to read about retro computers. My
+              other hobbies are painting and drawing and watching the latest
               blockbusters.
             </p>
           </div>
@@ -170,9 +178,6 @@
             <ul>
               <li>
                 <a href="https://github.com/DanijelCvit" alt="">Github </a>
-              </li>
-              <li>
-                <a href="https://www.linkedin.com/" alt="">LinkedIn</a>
               </li>
               <li>
                 <a href="https://codepen.io/halfdanwhiteshirt" alt=""
