Shows url of links instead of text when printing

--- a/Week1/index.html
+++ b/Week1/index.html
@@ -40,11 +40,15 @@
               <a href="https://www.mywebsite.com">www.mywebsite.com </a>
             </li>
             <li>
-              <a href="https://www.linkedin.com">
-                <div class="social linkedin">in</div></a
+              <a class="print-show" href="https://www.linkedin.com">
+                <div class="social linkedin print-hide">in</div></a
               >
-              <a href="https://www.twitter.com"
-                ><img class="social" src="./twitterw.png" alt="twitter" />
+              <a class="print-show" href="https://www.twitter.com"
+                ><img
+                  class="social print-hide"
+                  src="./twitterw.png"
+                  alt="twitter"
+                />
               </a>
             </li>
           </ul>
@@ -177,10 +181,18 @@
           <div class="content skills-lang-add">
             <ul>
               <li>
-                <a href="https://github.com/DanijelCvit" alt="">Github </a>
+                <a
+                  class="print-show"
+                  href="https://github.com/DanijelCvit"
+                  alt="Github"
+                  >Github
+                </a>
               </li>
               <li>
-                <a href="https://codepen.io/halfdanwhiteshirt" alt=""
+                <a
+                  class="print-show"
+                  href="https://codepen.io/halfdanwhiteshirt"
+                  alt="CodePen"
                   >CodePen</a
                 >
               </li>
